<resources>
    <string name="app_name">IBurguer</string>
    <!--  TELA LOGIN    -->
    <string name="frase1">Entre na sua conta:</string>
    <string name="lUsuario">Usuário:</string>
    <string name="lSenha">Senha:</string>
    <string name="hintUsuario">Seu email</string>
    <string name="hintSenha">Sua senha</string>
    <string name="btnEntrarString">Entrar</string>
    <string name="frase2">Não possui uma conta?</string>
    <string name="btnCadastrarString">Cadastre-se aqui</string>
    <string name="descLogo">Logo do sistema</string>
    <!-- - -->
    <!--  TELA Cadastro    -->
    <string name="frase3">Crie sua conta:</string>
    <string name="lNome">Seu nome:</string>
    <string name="hintNome">Insira seu primeiro nome</string>
    <string name="lSobrenome">Seu sobrenome:</string>
    <string name="hintSobrenome">Insira seu sobrenome</string>
    <string name="lblCpf">Seu CPF:</string>
    <string name="hintCpf">Insira seu cpf</string>
    <string name="lblEmail">Seu email:</string>
    <string name="hintEmail">Insira seu email</string>
    <string name="lblTelefone">Telefone:</string>
    <string name="hintTelefone">Insira seu número de telefone</string>
    <string name="lblSenha">Crie uma senha:</string>
    <string name="lblConfirmaSenhaString">Confirmar senha:</string>
    <string name="hintConfirmaSenhaString">Confirmar senha</string>
    <string name="btnFinalizarString">Finalizar cadastro</string>
    <string name="btnCancelarString">Cancelar</string>
    <!-- - -->
    <!--  TELA Principal    -->
    <string name="boasVindasHeader">Olá,</string>
    <string name="menuOpPrincipalString">Principal</string>
    <string name="menuOpPedidosString">Pedidos</string>
    <string name="menuOpContaString">Conta</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- - -->
    <!--  Fragment Principal    -->
    <string name="indicadorEnderecoAtualString">Seu endereço: </string>
    <string name="lblLojasString">Lojas: </string>
    <string name="lblOrdenarporString">Ordenar por: </string>
    <string name="lblOrderByMelhoresAvaliados">Melhores avaliados</string>
    <string name="lblOrderByMenorTaxaEntrega">Menor taxa de entrega</string>
    <string name="lblOrderByPopular">Popularidade</string>
    <string name="lblOrderByMelhorPreco">Menor preço</string>
    <!-- - -->
    <!--  Fragment Pedidos    -->
    <string name="lblseuspedidos">Seus Pedidos</string>
    <!-- - -->
    <!--  Fragment Conta    -->
    <string name="lblinfopessoais">Informações pessoais</string>
    <string name="lbldescinfopessoais">Nome completo e CPF e contato</string>

    <string name="lbldadosacesso">Dados de Login</string>
    <string name="lbldescdadosacesso">Senha de acesso à conta</string>
    <string name="lbldadosentrega">Dados de entrega</string>
    <string name="lbldescdadosentrega">Seus endereços de entrega</string>
    <!-- - -->
    <!--  Activity Novos pedidos    -->
    <string name="lblpedidostring">Pedido</string>
    <string name="lblprodutosstring">Produtos:</string>
    <string name="btnadditensstring">Adicionar mais itens desta loja</string>
    <string name="lblvalortotstring">Valor total:</string>
    <string name="lblentregastring">Entrega:</string>
    <string name="lblpagamentostring">Pagamento:</string>
    <string name="lbldinheirostring">Pagar com dinheiro</string>
    <string name="lblcartaostring">Pagar com cartão</string>
    <string name="btnconfirmapedido">CONFIRMAR PEDIDO</string>

    <!--  -->
    <!-- Activity endereços  -->
    <string name="lblseuEnderecos">Seus endereços</string>

    <!--  -->
    <!-- Activity  novo endereços  -->
    <string name="lblnovoEndereco">Novo Endereço</string>
    <string name="lblNovaRua">Rua:</string>
    <string name="lblNovaBairro">Bairro:</string>
    <string name="lblNovaCep">CEP:</string>
    <string name="lblNovaCidade">Cidade:</string>
    <string name="lblNovaEstado">Estado:</string>
    <string name="lblNovaNumero">Número:</string>
    <string name="lblNovaComplemento">Complemento:</string>
    <string name="hintNovaRua">Insira a rua</string>
    <string name="hintNovaBairro">Insira o bairro</string>
    <string name="hintNovaCep">Insira o CEP</string>
    <string name="hintNovaCidade">Insira a cidade</string>
    <string name="hintNovaEstado">Insira o estado</string>
    <string name="hintNovaNumero">Insira o número</string>
    <string name="hintNovaComplemento">Insira o complemento</string>
    <string name="btnCadastraEndereco">Salvar Endereço</string>
    <string name="btnEditarPessoais">Editar informações</string>
    <string name="dados_pessoais">Dados Pessoais</string>
    <string name="finalizar_pedido">Finalizar Pedido</string>
    <string name="situa_o">Situação:</string>
    <string name="dados_de_login">Dados de Login</string>
    <string name="crie_uma_nova_senha">Crie uma nova senha:</string>


</resources>