<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:local="http://schemas.android.com/apk/res-auto"
    android:background="@color/branco">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:isScrollContainer="true"
        android:background="@color/branco"
        android:padding="32dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:fontFamily="@font/roboto_negrito"
            android:text="@string/lblnovoEndereco"
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <TextView
            android:fontFamily="@font/roboto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/lblNovaRua"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/editRua"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:inputType="text"
            android:autofillHints="name"
            android:fontFamily="@font/roboto"
            android:hint="@string/hintNovaRua"
            android:textColorHint="@color/cinza"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:background="@drawable/input"
            android:paddingHorizontal="15dp"
            android:layout_marginTop="2dp" />

        <TextView
            android:fontFamily="@font/roboto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/lblNovaBairro"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/editBairro"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/input"
            android:fontFamily="@font/roboto"
            android:hint="@string/hintNovaBairro"
            android:inputType="text"
            android:paddingHorizontal="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/cinza"
            android:textSize="16sp" />

        <TextView
            android:fontFamily="@font/roboto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/lblNovaNumero"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/editNumero"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:inputType="number"
            android:autofillHints="emailAddress"
            android:fontFamily="@font/roboto"
            android:hint="@string/hintNovaNumero"
            android:textColorHint="@color/cinza"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:background="@drawable/input"
            android:paddingHorizontal="15dp"
            android:layout_marginTop="2dp" />

        <TextView
            android:fontFamily="@font/roboto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/lblNovaCep"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/editCep"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:inputType="number"
            android:autofillHints="phone"
            android:fontFamily="@font/roboto"
            android:hint="@string/hintNovaCep"
            android:textColorHint="@color/cinza"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:background="@drawable/input"
            android:paddingHorizontal="15dp"
            android:layout_marginTop="2dp" />

        <TextView
            android:fontFamily="@font/roboto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/lblNovaCidade"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/editCidade"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/roboto"
            android:hint="@string/hintNovaCidade"
            android:textColorHint="@color/cinza"
            android:inputType="text"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:background="@drawable/input"
            android:paddingHorizontal="15dp"/>

        <TextView
            android:fontFamily="@font/roboto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/lblNovaEstado"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginTop="10dp"/>

        <Spinner
            android:id="@+id/spnEstado"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="start"
            android:layout_marginTop="5dp"
            android:spinnerMode="dropdown"
            local:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            local:theme="@style/ThemeOverlay.AppCompat.Light"
            android:background="@drawable/input_spinner"/>

        <TextView
            android:fontFamily="@font/roboto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/lblNovaComplemento"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/editComplemento"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:inputType="text"
            android:fontFamily="@font/roboto"
            android:hint="@string/hintNovaComplemento"
            android:textColorHint="@color/cinza"
            android:textColor="@color/black"
            android:layout_marginTop="2dp"
            android:textSize="16sp"
            android:background="@drawable/input"
            android:paddingHorizontal="15dp"/>

        <Button
            android:id="@+id/btnSalvarEndereco"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/roboto"
            android:text="@string/btnCadastraEndereco"
            android:textColor="@color/white"
            android:background="@drawable/btn_filled"/>

        <Button
            android:id="@+id/btnCancelar"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/roboto"
            android:textColor="@color/vermelhoBack"
            android:background="@drawable/btn_outline"
            android:text="@string/btnCancelarString"/>

    </LinearLayout>
</ScrollView>