<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:local="http://schemas.android.com/apk/res-auto"
    android:background="@color/branco">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:isScrollContainer="true"
        android:background="@color/branco"
        android:padding="32dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:fontFamily="@font/roboto_negrito"
            android:text="@string/dados_pessoais"
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <TextView
            android:fontFamily="@font/roboto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/lNome"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/editarNome"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:inputType="text"
            android:autofillHints="name"
            android:fontFamily="@font/roboto"
            android:hint="@string/hintNome"
            android:textColorHint="@color/cinza"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:background="@drawable/input"
            android:paddingHorizontal="15dp"
            android:layout_marginTop="2dp"/>

        <TextView
            android:fontFamily="@font/roboto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/lSobrenome"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginTop="5dp"/>

        <EditText
            android:id="@+id/editarSobrenome"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="2dp"
            android:autofillHints="name"
            android:fontFamily="@font/roboto"
            android:hint="@string/hintSobrenome"
            android:inputType="text"
            android:textColor="@color/black"
            android:textColorHint="@color/cinza"
            android:textSize="16sp"
            android:background="@drawable/input"
            android:paddingHorizontal="15dp"/>

        <TextView
            android:fontFamily="@font/roboto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/lblCpf"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginTop="5dp"/>

        <EditText
            android:id="@+id/editarCPF"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:inputType="number"
            android:fontFamily="@font/roboto"
            android:hint="@string/hintCpf"
            android:textColorHint="@color/cinza"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:background="@drawable/input"
            android:paddingHorizontal="15dp"
            android:layout_marginTop="2dp"/>


        <TextView
            android:fontFamily="@font/roboto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/lblTelefone"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginTop="5dp"/>

        <EditText
            android:id="@+id/editarTelefone"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="2dp"
            android:autofillHints="phone"
            android:fontFamily="@font/roboto"
            android:hint="@string/hintTelefone"
            android:inputType="phone"
            android:textColor="@color/black"
            android:textColorHint="@color/cinza"
            android:textSize="16sp"
            android:background="@drawable/input"
            android:paddingHorizontal="15dp"/>

        <Button
            android:id="@+id/btnEditSalvarEndereco"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/roboto"
            android:text="@string/btnCadastraEndereco"
            android:textColor="@color/white"
            android:background="@drawable/btn_filled"/>

        <Button
            android:id="@+id/btnEditCancelar"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/roboto"
            android:textColor="@color/vermelhoBack"
            android:background="@drawable/btn_outline"
            android:text="@string/btnCancelarString"/>

    </LinearLayout>
</ScrollView>