<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/branco"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:isScrollContainer="true"
        android:padding="32dp">

        <ImageView
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:layout_gravity="start"
            android:contentDescription="@string/descLogo"
            android:maxHeight="50dp"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="28dp"
            android:fontFamily="@font/roboto_negrito"
            android:text="@string/frase1"
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto"
            android:text="@string/lUsuario"
            android:textColor="@color/black"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/editLoginEmail"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:fontFamily="@font/roboto"
            android:hint="@string/hintUsuario"
            android:importantForAutofill="no"
            android:background="@drawable/input"
            android:paddingHorizontal="15dp"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textColorHint="@color/cinza"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/roboto"
            android:text="@string/lSenha"
            android:textColor="@color/black"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/editLoginSenha"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/roboto"
            android:hint="@string/hintSenha"
            android:importantForAutofill="no"
            android:background="@drawable/input"
            android:paddingHorizontal="15dp"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="@color/cinza"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/btnLogin"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/btn_filled"
            android:fontFamily="@font/roboto"
            android:text="@string/btnEntrarString"
            android:textColor="@color/white" />

        <CheckBox
            android:id="@+id/ckbManter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Mantenha-me conectado"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/roboto_negrito"
            android:text="@string/frase2"
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/btnCadastrar"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/btn_outline"
            android:fontFamily="@font/roboto"
            android:text="@string/btnCadastrarString"
            android:textColor="@color/vermelhoBack"/>

    </LinearLayout>
</ScrollView>