<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/branco">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:isScrollContainer="true"
        android:background="@color/branco"
        android:padding="32dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:fontFamily="@font/roboto_negrito"
            android:text="@string/frase3"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:fontFamily="@font/roboto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/lNome"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <EditText
            android:id="@+id/editNome"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:inputType="text"
            android:autofillHints="name"
            android:fontFamily="@font/roboto"
            android:hint="@string/hintNome"
            android:textColorHint="@color/cinza"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:background="@drawable/input"
            android:paddingHorizontal="15dp"
            android:layout_marginTop="2dp"/>

        <TextView
            android:fontFamily="@font/roboto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/lSobrenome"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_marginTop="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <EditText
            android:id="@+id/editSobrenome"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="2dp"
            android:autofillHints="name"
            android:fontFamily="@font/roboto"
            android:hint="@string/hintSobrenome"
            android:inputType="text"
            android:textColor="@color/black"
            android:textColorHint="@color/cinza"
            android:textSize="16sp"
            android:background="@drawable/input"
            android:paddingHorizontal="15dp"/>

        <TextView
            android:fontFamily="@font/roboto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/lblCpf"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_marginTop="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <EditText
            android:id="@+id/editCPF"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:inputType="number"
            android:fontFamily="@font/roboto"
            android:hint="@string/hintCpf"
            android:textColorHint="@color/cinza"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:background="@drawable/input"
            android:paddingHorizontal="15dp"
            android:layout_marginTop="2dp"/>

        <TextView
            android:fontFamily="@font/roboto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/lblEmail"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_marginTop="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <EditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress"
            android:fontFamily="@font/roboto"
            android:hint="@string/hintEmail"
            android:textColorHint="@color/cinza"
            android:textColor="@color/black"
            android:layout_marginTop="2dp"
            android:textSize="16sp"
            android:background="@drawable/input"
            android:paddingHorizontal="15dp"/>

        <TextView
            android:fontFamily="@font/roboto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/lblTelefone"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_marginTop="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <EditText
            android:id="@+id/editTelefone"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="2dp"
            android:autofillHints="phone"
            android:fontFamily="@font/roboto"
            android:hint="@string/hintTelefone"
            android:inputType="phone"
            android:textColor="@color/black"
            android:textColorHint="@color/cinza"
            android:textSize="16sp"
            android:background="@drawable/input"
            android:paddingHorizontal="15dp"/>

        <TextView
            android:fontFamily="@font/roboto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/lblSenha"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_marginTop="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <EditText
            android:id="@+id/editSenha"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="2dp"
            android:autofillHints="password"
            android:fontFamily="@font/roboto"
            android:hint="@string/hintSenha"
            android:textColorHint="@color/cinza"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:background="@drawable/input"
            android:paddingHorizontal="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/roboto"
            android:text="@string/lblConfirmaSenhaString"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <EditText
            android:id="@+id/editConfirmarSenha"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:inputType="textPassword"
            android:fontFamily="@font/roboto"
            android:hint="@string/hintConfirmaSenhaString"
            android:textColorHint="@color/cinza"
            android:textColor="@color/black"
            android:layout_marginTop="2dp"
            android:textSize="16sp"
            android:background="@drawable/input"
            android:paddingHorizontal="15dp"/>

        <Button
            android:id="@+id/btnFinalizarCadastro"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/roboto"
            android:text="@string/btnFinalizarString"
            android:textColor="@color/white"
            android:background="@drawable/btn_filled"/>

        <Button
            android:id="@+id/btnCancelar"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/roboto"
            android:textColor="@color/vermelhoBack"
            android:background="@drawable/btn_outline"
            android:text="@string/btnCancelarString"/>

    </LinearLayout>
</ScrollView>